# rmkit

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  keyboard.toml
.github/workflows/: release.yml
chips/: Cargo.toml
chips/src/: lib.rs
hex-to-uf2/: Cargo.toml  uf2conv.py
hex-to-uf2/src/: lib.rs
rmkit/: Cargo.toml  keyboard.toml
rmkit/src/: args.rs  cargo_build.rs  cargo_objcopy.rs  config.rs  keyboard_toml.rs  main.rs  rmk_build.rs
src/: args.rs  chip.rs  config.rs  keyboard_toml.rs  main.rs  version.rs
